fix overflow

--- a/style.css
+++ b/style.css
@@ -1010,11 +1010,12 @@ left: 70vw;
         top: 97vh;
         z-index: 10;
     }
-
+	
     #section-3 .content {
         padding-top: 9vh;
     }
     #back-circle {
+	    display: none;
         width: 100vh;
         height: 100vh;
         margin-top: 10vh;
@@ -1043,8 +1044,6 @@ left: 70vw;
         margin-top: 0rem;
     }
 
-
-
     #section-5 {
         height: auto;
         padding: 4rem 0;
@@ -1057,6 +1056,9 @@ left: 70vw;
         margin: 0 auto;
         padding: 2rem 0;
     }
+	.experience .top {
+		width: 90%;
+	}
     .experience .preview img {
         width: 90%;
         max-width: 40rem;
